<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".activity.DashBoard">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:text="@string/dashboard"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/ll_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="visible"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/ll_Scan_Code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.v7.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="2dp">

                        <com.mohit.voodoo.bipe_ems.appcommon.SquareRelativeLayout

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/themeyellow"
                            android:padding="20dp">

                            <TextView
                                android:id="@+id/tv_Scan_Count"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:background="@drawable/circlebg_red"
                                android:gravity="center"
                                android:text="23"
                                android:textColor="@color/white"
                                android:textSize="11sp"
                                android:visibility="gone" />

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_above="@+id/tv_Sacan"
                                android:paddingTop="15dp"
                                android:src="@drawable/scan_qr" />

                            <TextView
                                android:id="@+id/tv_Sacan"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:gravity="center"
                                android:paddingTop="5dp"
                                android:text="@string/scan_QR"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                        </com.mohit.voodoo.bipe_ems.appcommon.SquareRelativeLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>


                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:id="@+id/ll_Event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.v7.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="2dp">

                        <com.mohit.voodoo.bipe_ems.appcommon.SquareRelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/themeyellow"
                            android:padding="20dp">

                            <TextView
                                android:id="@+id/tv_Event_Count"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:background="@drawable/circlebg_red"
                                android:gravity="center"
                                android:text="110"
                                android:textColor="@color/white"
                                android:textSize="9sp"
                                android:textStyle="bold"
                                android:visibility="gone" />

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_above="@+id/tv_Events"
                                android:paddingTop="20dp"
                                android:src="@drawable/events" />

                            <TextView
                                android:id="@+id/tv_Events"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:gravity="center"
                                android:paddingTop="5dp"
                                android:text="@string/events"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                        </com.mohit.voodoo.bipe_ems.appcommon.SquareRelativeLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="visible"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/ll_Invitee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.v7.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="2dp">

                        <com.mohit.voodoo.bipe_ems.appcommon.SquareRelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/themeyellow"
                            android:padding="20dp">

                            <TextView
                                android:id="@+id/tv_Invitee_Count"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:background="@drawable/circlebg_red"
                                android:gravity="center"
                                android:text="23"
                                android:textColor="@color/white"
                                android:textSize="11sp"
                                android:visibility="gone" />

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_above="@+id/tv_Invitee"
                                android:paddingTop="15dp"
                                android:src="@drawable/received_invitee" />

                            <TextView
                                android:id="@+id/tv_Invitee"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:gravity="center"
                                android:paddingTop="5dp"
                                android:text="@string/invitees"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                        </com.mohit.voodoo.bipe_ems.appcommon.SquareRelativeLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>


                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:id="@+id/ll_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.v7.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="2dp">

                        <com.mohit.voodoo.bipe_ems.appcommon.SquareRelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/themeyellow"
                            android:padding="20dp">

                            <TextView
                                android:id="@+id/tv_Lang_Count"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:background="@drawable/circlebg_red"
                                android:gravity="center"
                                android:text="110"
                                android:textColor="@color/white"
                                android:textSize="9sp"
                                android:textStyle="bold"
                                android:visibility="gone" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_above="@+id/tv_language"
                                android:paddingTop="10dp"
                                android:src="@drawable/translate" />

                            <TextView
                                android:id="@+id/tv_language"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:gravity="center"
                                android:paddingTop="5dp"
                                android:text="@string/change_language"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                        </com.mohit.voodoo.bipe_ems.appcommon.SquareRelativeLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>